# Primrose

./: .ycm_extra_conf.py  CMakeLists.txt  dependencies.txt  readme.md
include/: static_array.hpp
tests/: StaticArray.cpp
